@@ -890,7 +890,8 @@
 				</animation>
 			</control>
 			<control type="group">
-				<visible>!Window.IsVisible(videoosd)</visible>
+				<visible>!Window.IsVisible(videoosd) | Player.ShowInfo</visible>
+				<animation effect="slide" start="0" end="0,-60" time="300" tween="sine" easing="inout" condition="Window.IsActive(videoosd)">Conditional</animation>
 				<animation type="WindowOpen" reversible="false">
 					<effect type="fade" start="0" end="100" time="300" tween="sine" easing="inout" />
 					<effect type="slide" start="0,70" end="0" time="300" tween="sine" easing="inout" />
@@ -1123,6 +1124,7 @@
 					</control>
 				</control>
 				<control type="group">
+					
 					<posy>673</posy>
 					<posx>20</posx>
 					<control type="image">
@@ -1136,6 +1138,7 @@
 						<texture background="true" diffuse="arctic/osd/poster-16.png">$VAR[ArcticOSDPoster]</texture>
 						<aspectratio align="center" aligny="bottom">keep</aspectratio>
 						<visible>!VideoPlayer.Content(LiveTV) + [!Skin.HasSetting(videoosd.clearlogo) | [IsEmpty(Player.Art(tvshow.clearlogo)) + IsEmpty(Player.Art(clearlogo))]]</visible>
+						<animation effect="slide" start="0" end="0,60" time="300" tween="sine" easing="inout" condition="Window.IsActive(videoosd)">Conditional</animation>
 					</control>
 					<control type="image">
 						<description>Thumb</description>
